# corekube-rs

./: Cargo.toml  README.md
corekube/: Cargo.toml  config.toml
corekube/src/: config.rs  main.rs  tests.rs
corekube/src/ngap_handlers/: initial_ue_message.rs  mod.rs  response.rs  setup_request.rs  uplink_nas_transport.rs
corekube/src/ngap_handlers/initial_ue_message/: mod.rs
corekube/src/ngap_handlers/setup_request/: mod.rs  tests.rs
corekube/src/ngap_handlers/uplink_nas_transport/: mod.rs
corekube/tests/: udp_sender.py
nas/: Cargo.toml
nas/src/: lib.rs
ngap_asn1/: Cargo.toml  build.rs
ngap_asn1/specs/ngap/: ngap.asn
ngap_asn1/src/: lib.rs
src/: main.rs
