[package]
name = "corekube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1-codecs = { git = "https://github.com/ystero-dev/hampi.git" }
ngap_asn1 = { path = "../ngap_asn1" }
hex = "0.4.3"
flexi_logger = "0.28.0"
log = "0.4.21"
