[package]
name = "ngap_asn1"
version = "0.1.0"
edition = "2021"

[dependencies]
asn1-codecs = { git = "https://github.com/ystero-dev/hampi.git" }
asn1_codecs_derive = { git = "https://github.com/ystero-dev/hampi.git" }
bitvec = "1.0.1"
log = "0.4.21"

[build-dependencies]
asn1-compiler = "0.6.1"
